Сделана выборка изображений из галереи, сделаны запросы на бэк с получением результата от нейронки и много чего ещё

--- a/android/app/src/main/res/layout/fragment_camera.xml
+++ b/android/app/src/main/res/layout/fragment_camera.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/getPhotoImageView"
+        android:id="@+id/getImageImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/get_photo_button"
