--- a/android/app/src/main/res/navigation/camera_navigation_graph.xml
+++ b/android/app/src/main/res/navigation/camera_navigation_graph.xml
@@ -7,23 +7,13 @@
     <fragment
         android:id="@+id/processingFragment"
         android:name="ru.webant.openmeters.scenes.camera.processing.ProcessingFragment"
-        android:label="ProcessingFragment" >
-        <action
-            android:id="@+id/openResultFragment"
-            app:destination="@id/resultFragment"
-            app:popUpTo="@id/camera_navigation"
-            app:popUpToInclusive="true" />
+        android:label="ProcessingFragment">
         <argument
             android:name="filePaths"
             app:argType="string[]" />
-    </fragment>
-    <fragment
-        android:id="@+id/resultFragment"
-        android:name="ru.webant.openmeters.scenes.camera.result.ResultFragment"
-        android:label="ResultFragment" >
         <action
-            android:id="@+id/openAllReadyFragment"
-            app:destination="@id/allReadyFragment"
+            android:id="@+id/openResultFragment"
+            app:destination="@id/resultFragment"
             app:popUpTo="@id/camera_navigation"
             app:popUpToInclusive="true" />
     </fragment>
@@ -34,10 +24,23 @@
     <fragment
         android:id="@+id/cameraFragment"
         android:name="ru.webant.openmeters.scenes.camera.CameraFragment"
-        android:label="CameraFragment" >
+        android:label="CameraFragment">
         <action
             android:id="@+id/openProcessingFragment"
             app:destination="@id/processingFragment"
+            app:popUpTo="@id/camera_navigation"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/resultFragment"
+        android:name="ru.webant.openmeters.scenes.camera.result.ResultFragment"
+        android:label="ResultFragment" >
+        <argument
+            android:name="indicatorResults"
+            app:argType="ru.webant.openmeters.models.ParcelableIndicatorResponseEntity[]" />
+        <action
+            android:id="@+id/openAllReadyFragment"
+            app:destination="@id/allReadyFragment"
             app:popUpTo="@id/camera_navigation"
             app:popUpToInclusive="true" />
     </fragment>
