--- a/android/app/src/main/res/layout/fragment_result.xml
+++ b/android/app/src/main/res/layout/fragment_result.xml
@@ -78,6 +78,19 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <ImageView
+            android:id="@+id/loaderImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_loader_blue"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/meterReadingErrorTextView"
             android:layout_width="0dp"
@@ -89,9 +102,9 @@
             android:lineSpacingMultiplier="1.6"
             android:text="@string/could_not_recognize_try_again"
             android:textColor="@color/colorRed"
+            android:textColorHint="@color/colorRed"
             android:textSize="12sp"
             android:visibility="gone"
-            android:textColorHint="@color/colorRed"
             app:layout_constraintEnd_toEndOf="@id/meterReadingsTextInputLayout"
             app:layout_constraintStart_toStartOf="@id/meterReadingsTextInputLayout"
             app:layout_constraintTop_toBottomOf="@id/meterReadingsTextInputLayout" />
