--- a/android/app/src/main/res/layout/toolbar.xml
+++ b/android/app/src/main/res/layout/toolbar.xml
@@ -5,6 +5,7 @@
     android:layout_height="70dp">
 
     <TextView
+        android:id="@+id/toolbarTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/graphic_regular"
