add first screen

--- a/iOS/iOS/Src/App/Scene/Camera/Camera.storyboard
+++ b/iOS/iOS/Src/App/Scene/Camera/Camera.storyboard
@@ -78,7 +78,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cIt-4F-0GE">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="966"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SA7-Tv-vOV">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SA7-Tv-vOV">
                                         <rect key="frame" x="119.5" y="453" width="175" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Обрабатываем..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z5K-F0-hhw">
