--- a/iOS/iOS/Src/App/Scene/History/Cell/HistoryCell/HistoryCell.xib
+++ b/iOS/iOS/Src/App/Scene/History/Cell/HistoryCell/HistoryCell.xib
@@ -35,7 +35,7 @@
                                     <constraint firstAttribute="width" constant="384" id="f0e-HR-eQD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Graphik-Semibold" family="Graphik" pointSize="22"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дата: 12 дек. 2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsD-vx-t8u">
@@ -87,6 +87,9 @@
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="black">
+            <color red="0.20399999618530273" green="0.22400000691413879" blue="0.2669999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="grayText">
             <color red="0.42399999499320984" green="0.4779999852180481" blue="0.55299997329711914" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
