--- a/iOS/iOS/Src/App/Scene/Ready/Ready.storyboard
+++ b/iOS/iOS/Src/App/Scene/Ready/Ready.storyboard
@@ -40,7 +40,7 @@
                                     <constraint firstAttribute="width" constant="351" id="oXU-wx-TMS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Graphik-Bold" family="Graphik" pointSize="22"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ulj-53-tYI">
@@ -65,7 +65,7 @@
                                     <constraint firstAttribute="width" constant="207" id="r6s-3w-GPG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Graphik-Regular" family="Graphik" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -92,6 +92,9 @@
     </scenes>
     <resources>
         <image name="like" width="125" height="125"/>
+        <namedColor name="black">
+            <color red="0.20399999618530273" green="0.22400000691413879" blue="0.2669999897480011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="blue">
             <color red="0.0080000003799796104" green="0.72899997234344482" blue="0.9100000262260437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
